examples/example_2/pet/errors/product-create-error.js
class ProductCreateError extends Error {

    constructor(...args) {
        super(...args)
        Error.captureStackTrace(this, this.constructor)
    }

}
module.exports = ProductCreateError
